// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test fellowsSummaryCard snapshots fellowSummaryCard should display OffTrack when fellow is offTrack 1`] = `
<div
  className="fellow-summary-card"
  id="1"
  key="1"
  onClick={[MockFunction]}
  onKeyPress={[MockFunction]}
  role="button"
  tabIndex="0"
>
  <div
    className="row fellow-summary-card-header"
  >
    <div
      className="col-2 fellow-card-avatar-wrapper"
    >
      <div
        className=""
      >
        <img
          alt=""
          className="img-responsive rounded-circle avatar"
          src="https://lh6.googleusercontent.com/-BufLjmmIcGY/AAAAAAAAAAI/AAAAAAAAAAA/ACevoQOvARh88U8Y-5JFnZpZ88zfTlb93A/mo/photo.jpg?sz=50"
        />
      </div>
    </div>
    <div
      className="col name-product-wrapper"
    >
      <div
        className="fellow-name"
      >
        <span>
           
          Kingsley obot
        </span>
      </div>
      <div
        className="product"
      >
        <span>
          Watch Tower
        </span>
      </div>
    </div>
  </div>
  <hr
    className="line-2"
  />
  <div
    className="fellow-summary-card-body"
  >
    <div
      className="float-left left"
    >
      <p
        className="level-header offset-margin-bottom"
      >
        Level
      </p>
      <p
        className="level-description"
      >
        D0B Apprenticeship
      </p>
      <p
        className="started-header offset-margin-bottom"
      >
        Started
      </p>
      <p
        className="started-description"
      >
        2018-10-15
      </p>
      <p
        className="dev-pulse-average-header offset-margin-bottom"
      >
        DevPulse Average
      </p>
      <p
        className="dev-pulse-average-description"
      >
        1.04
      </p>
    </div>
    <div
      className="float-right right"
    >
      <p
        className="status-header offset-margin-bottom"
      >
        Status
      </p>
      <p
        className="status-description"
      >
        <span
          className="color-off-track"
        >
          Off-Track
        </span>
      </p>
      <p
        className="ending-header offset-margin-bottom"
      >
        Ending
      </p>
      <p
        className="ending-description"
      >
        2019-01-16
      </p>
      <p
        className="lms-outputs-header offset-margin-bottom"
      >
        LMS Outputs
      </p>
      <p
        className="lms-outputs-description"
      >
        No lms data
      </p>
    </div>
  </div>
</div>
`;

exports[`Test fellowsSummaryCard snapshots fellowSummaryCard should display OnTrack when fellow is ontrack 1`] = `
<div
  className="fellow-summary-card"
  id="1"
  key="1"
  onClick={[MockFunction]}
  onKeyPress={[MockFunction]}
  role="button"
  tabIndex="0"
>
  <div
    className="row fellow-summary-card-header"
  >
    <div
      className="col-2 fellow-card-avatar-wrapper"
    >
      <div
        className=""
      >
        <img
          alt=""
          className="img-responsive rounded-circle avatar"
          src="https://lh6.googleusercontent.com/-BufLjmmIcGY/AAAAAAAAAAI/AAAAAAAAAAA/ACevoQOvARh88U8Y-5JFnZpZ88zfTlb93A/mo/photo.jpg?sz=50"
        />
      </div>
    </div>
    <div
      className="col name-product-wrapper"
    >
      <div
        className="fellow-name"
      >
        <span>
           
          Kingsley obot
        </span>
      </div>
      <div
        className="product"
      >
        <span>
          Watch Tower
        </span>
      </div>
    </div>
  </div>
  <hr
    className="line-2"
  />
  <div
    className="fellow-summary-card-body"
  >
    <div
      className="float-left left"
    >
      <p
        className="level-header offset-margin-bottom"
      >
        Level
      </p>
      <p
        className="level-description"
      >
        D0B Apprenticeship
      </p>
      <p
        className="started-header offset-margin-bottom"
      >
        Started
      </p>
      <p
        className="started-description"
      >
        2018-10-15
      </p>
      <p
        className="dev-pulse-average-header offset-margin-bottom"
      >
        DevPulse Average
      </p>
      <p
        className="dev-pulse-average-description"
      >
        1.04
      </p>
    </div>
    <div
      className="float-right right"
    >
      <p
        className="status-header offset-margin-bottom"
      >
        Status
      </p>
      <p
        className="status-description"
      >
        <span
          className="color-on-track"
        >
          On-Track
        </span>
      </p>
      <p
        className="ending-header offset-margin-bottom"
      >
        Ending
      </p>
      <p
        className="ending-description"
      >
        2019-01-16
      </p>
      <p
        className="lms-outputs-header offset-margin-bottom"
      >
        LMS Outputs
      </p>
      <p
        className="lms-outputs-description"
      >
        No lms data
      </p>
    </div>
  </div>
</div>
`;

exports[`Test fellowsSummaryCard snapshots fellowSummaryCard should display Pip when fellow is on pip 1`] = `
<div
  className="fellow-summary-card"
  id="1"
  key="1"
  onClick={[MockFunction]}
  onKeyPress={[MockFunction]}
  role="button"
  tabIndex="0"
>
  <div
    className="row fellow-summary-card-header"
  >
    <div
      className="col-2 fellow-card-avatar-wrapper"
    >
      <div
        className=""
      >
        <img
          alt=""
          className="img-responsive rounded-circle avatar"
          src="https://lh6.googleusercontent.com/-BufLjmmIcGY/AAAAAAAAAAI/AAAAAAAAAAA/ACevoQOvARh88U8Y-5JFnZpZ88zfTlb93A/mo/photo.jpg?sz=50"
        />
      </div>
    </div>
    <div
      className="col name-product-wrapper"
    >
      <div
        className="fellow-name"
      >
        <span>
           
          Kingsley obot
        </span>
      </div>
      <div
        className="product"
      >
        <span>
          Watch Tower
        </span>
      </div>
    </div>
  </div>
  <hr
    className="line-2"
  />
  <div
    className="fellow-summary-card-body"
  >
    <div
      className="float-left left"
    >
      <p
        className="level-header offset-margin-bottom"
      >
        Level
      </p>
      <p
        className="level-description"
      >
        D0B Apprenticeship
      </p>
      <p
        className="started-header offset-margin-bottom"
      >
        Started
      </p>
      <p
        className="started-description"
      >
        2018-10-15
      </p>
      <p
        className="dev-pulse-average-header offset-margin-bottom"
      >
        DevPulse Average
      </p>
      <p
        className="dev-pulse-average-description"
      >
        1.04
      </p>
    </div>
    <div
      className="float-right right"
    >
      <p
        className="status-header offset-margin-bottom"
      >
        Status
      </p>
      <p
        className="status-description"
      >
        <span
          className=""
        >
          PIP
        </span>
      </p>
      <p
        className="ending-header offset-margin-bottom"
      >
        Ending
      </p>
      <p
        className="ending-description"
      >
        2019-01-16
      </p>
      <p
        className="lms-outputs-header offset-margin-bottom"
      >
        LMS Outputs
      </p>
      <p
        className="lms-outputs-description"
      >
        No lms data
      </p>
    </div>
  </div>
</div>
`;
